quoting-CypressTK1/force-app/main/default/objects/ProvusSetup__mdt/fields/CreateSimpleScenarios__c.field-meta.xml
<CustomField>
    <fullName>CreateSimpleScenarios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Simple Scenarios</label>
    <type>Checkbox</type>
</CustomField>