quoting-CypressTK1/force-app/main/default/objects/ProvusSetup__mdt/fields/DisableProductSync__c.field-meta.xml
<CustomField>
    <fullName>DisableProductSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description
	>Disable changes between the Provus Products table and the Product2 table</description>
    <label>Disable Product Sync</label>
    <type>Checkbox</type>
</CustomField>