quoting-CypressTK1/force-app/main/default/objects/ProvusSetup__mdt/fields/QuoteApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>QuoteApprovalProcess__c</fullName>
    <label>Quote Approval Process Name</label>
    <length>80</length>
    <description>Default Approval Process Name for Provus Quote</description>
    <type>Text</type>
</CustomField>